# incr_stats

./: .gitignore  Cargo.toml  README.md
benches/: all_stats_bench.rs  benches_main.rs  comparision_bench.rs  comparison_bench.rs  update_bench.rs
examples/: batch_example.rs  incr_example.rs  vec_example.rs
src/: batch.rs  desc.rs  error.rs  incr.rs  lib.rs  main.rs  vec.rs
src/tests/: array_test.rs  batch_test.rs  check.rs  desc_test.rs  equivalence_test.rs  incr_test.rs  test_array.rs  test_batch.rs  test_inc.rs  tests.rs  vec_test.rs
