[package]
name = "rust_stats"
version = "1.0.0"
edition = "2021"
authors = ["Gary Boone <gary.boone@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garyboone/rust_stats"
keywords = ["rust", "statistics", "incremental", "skewness", "kurtosis"]
include = ["src/**/*", "LICENSE", "README.md"]

[dependencies]
criterion = "0.4.0"
float_eq = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.38"

[[bench]]
name = "comparision_bench"
harness = false
