[package]
name = "incr_stats"
version = "1.0.2"
edition = "2021"
authors = ["Gary Boone <gary.boone@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/garyboone/incr_stats"
description = "Fast, scalable, incremental descriptive statistics in Rust"
keywords = ["rust", "statistics", "incremental", "skewness", "kurtosis"]

[dependencies]
float_eq = "1.0.1"
rand = "0.8.5"
thiserror = "1.0.38"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2.12"
features = ["js"]

[[bench]]
name = "benches_main"
harness = false

[dev-dependencies]
criterion = "0.5.1"
